# world_model_pusher

./: .envrc  .flake8  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
assets/mujoco/: simple_arm.xml  so101_scene.xml  table_scene.xml
configs/: default.yaml
notebooks/: template.ipynb
src/chuck_dreamer/: __init__.py  config.py  policy.py  reward.py  trainer.py
src/chuck_dreamer/dreamer/: __init__.py  episode_loader.py  mlx_model.py  mlx_models.py  policy.py  replay_buffer.py
src/chuck_dreamer/evals/: open_loop_rollout.ipynb
src/chuck_dreamer/sim/: __init__.py  data_collection.py  episode_collector.py  episode_writer.py  pushing_env.py  scene_builder.py  scene_config.py  scene_generator.py  scene_player.py  scripted_policy.py  step_info.py
src/chuck_dreamer/training/: episode_loader.py  episode_processor.py  replay_buffer.py  tracker.py  trainer.py
src/world_model_pusher/: __init__.py  config.py
src/world_model_pusher/sim/: __init__.py  data_collection.py  pushing_env.py  scene_builder.py  scene_config.py  scene_generator.py
src/world_model_pusher/training/: __init__.py
tests/: __init__.py  test_episode_loader.py  test_mlx_model.py  test_replay_buffer.py  test_reward.py  test_sim.py  test_tracker.py
