[project]
name = "chuck-dreamer"
version = "0.1.0"
description = "Robot Learning Group Project: Chuck Dreamer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # MLX - Apple's ML framework (Apple Silicon only)
    "mlx>=0.17.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # TensorFlow for TFRecord support
    "tensorflow>=2.15.0",
    "tensorflow-datasets>=4.9.0",
    # Core ML and data processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    # Computer Vision
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    # ML frameworks (alternatives to MLX)
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "scikit-learn>=1.3.0",
    # Robotics and RL
    "gymnasium>=0.29.0",
    "pybullet>=3.2.5",
    "mujoco>=3.0.0",
    # Tensor operations
    "einops>=0.7.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    # File formats and data handling
    "h5py>=3.9.0",
    "zarr>=2.15.0",
    # Configuration and experiment tracking
    "omegaconf>=2.3.0",
    "wandb>=0.15.0",
    "hydra-core>=1.3.0",
    # Development tools
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    # Transformers (for pre-trained models)
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
    # Jupyter for development
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.1.0",
    "lxml>=6.0.4",
    "lxml-stubs>=0.5.1",
    "types-tqdm>=4.67.3.20260408",
    "rerun-sdk>=0.31.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 160
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 160

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flake8]
max-line-length = 160
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "autopep8>=2.3.2",
]
